<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".InitialTallyPlayerViewActivity">

    <TextView
        android:id="@+id/tugOfLogicTitleTextView"
        android:layout_width="226dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/tugOfLogicTitleStr"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/initialTallyTitleTextView"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_below="@+id/tugOfLogicTitleTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="103dp"
        android:layout_marginRight="103dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/initialTallyStr"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/mainClaimInitialTallyTextView"
        android:layout_width="290dp"
        android:layout_height="100dp"
        android:layout_below="@+id/initialTallyTitleTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
        android:background="@android:color/background_light"
        android:text="@string/mainClaimStr"
        android:textSize="18sp" />

    <Button
        android:id="@+id/againstClaimButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@+id/mainClaimInitialTallyTextView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:background="@drawable/rounded_button"
        android:text="@string/againstBtnStr" />

    <Button
        android:id="@+id/forClaimButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@+id/mainClaimInitialTallyTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:layout_toStartOf="@+id/againstClaimButton"
        android:layout_toLeftOf="@+id/againstClaimButton"
        android:background="@drawable/rounded_button"
        android:text="@string/forBtnStr" />

    <TextView
        android:id="@+id/numberOfPlayersForTextView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/againstClaimButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="114dp"
        android:layout_marginRight="114dp"
        android:layout_toStartOf="@+id/numberOfPlayersAgainstTextView"
        android:layout_toLeftOf="@+id/numberOfPlayersAgainstTextView"
        android:gravity="center"
        android:text="@string/numberOfPlayersForStr"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/numberOfPlayersAgainstTextView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/againstClaimButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:gravity="center"
        android:text="@string/numberOfPlayersAgainstStr"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/enterRiPButton"
        android:layout_width="200dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:layout_marginBottom="98dp"
        android:background="@drawable/rounded_edit_text"
        android:gravity="center"
        android:text="@string/enterRipBtnStr"
        android:textColor="@color/white"
        android:textSize="18sp" />
</RelativeLayout>